# vps-crawl

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  arvancloud.txt  docker-compose.yml  ferdowsi_cloud.txt  irangpu.txt  iranserver.txt  lexoya.txt  pyproject.toml
config/: settings.py  urls.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
vps_market/: admin.py  apps.py  manage.py  serializers.py  services.py  urls.py  views.py
vps_market/crawlers/providers/: __init__.py  arvancloud.py  base.py  ferdowsi_cloud.py  irangpu.py  iranserver.py  lexoya.py
vps_market/crawlers/utils/: specs.py  text.py
vps_market/management/commands/: crawl_offers.py
vps_market/migrations/: 0001_initial.py
vps_market/offers/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
vps_market/offers/management/commands/: crawl_offers.py
vps_market/offers/migrations/: 0001_initial.py  0002_region_detail_gpu_spec.py  0003_offer_gpu_fk.py  0004_toman_hourly_price.py
vps_market/providers/: __init__.py  arvancloud.py  base.py  iranserver.py
vps_market/utils/: js_extract.py  specs.py
vps_market/vps_market/: asgi.py  settings.py  urls.py  wsgi.py
